chore: Add app icon and update build config

--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
       "target": [
         "AppImage"
       ],
-      "category": "Audio"
+      "category": "Audio",
+      "icon": "icon.png"
     }
   },
   "dependencies": {
